--- a/views/public/index.html
+++ b/views/public/index.html
@@ -30,6 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <input type="hidden" id="clientName" />
     <input type="hidden" id="networkIP" />
+    <input type="hidden" id="port" />
     <div id="root"></div>
     <!--
       This HTML file is a template.
